# wjs-profile-project

./: .editorconfig  .gitignore  .gitlab-ci-pkg-build-and-upload.yml  .gitlab-ci-pkg-deploy-to-pp.yml  .gitlab-ci-pkg-deploy-to-test.yml  .gitlab-ci-pkg-deploy.yml  .gitlab-ci-pre-commit.yml  .gitlab-ci-run-tests.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .python-version  Dockerfile  LICENSE  README.md  build_assets.sh  cicd_merged_settings.py  cicd_settings.py  cicd_test_settings.py  docker-compose-test-env-nobuild.yml  docker-compose-test-env.yml  docker-compose-test-local.yml  janeway-db-dump.sql.bz2  jcom-redirects_include.conf  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_environment  test_settings.py
.gitlab/merge_request_templates/: base.md
Dockerfile-python+git/: Dockerfile
Dockerfile-python+git+janeway/: Dockerfile
setup-docs/: apache-log-and-ssl.inc  apache-proxy-and-socket.inc  apache-proxy8000.inc  apache-static-files-block.inc  apache-virtualhost-example.conf  deploy.sh  janeway-qcluster.service  mimic-production.sh  robots.txt  set_incoming_folder_acls.sh  settings.py  setup-check-pseudo-script.sh  trasbordo-pp-prod.sh  trasbordo-pp-test.sh  uwsgi-emperor-example.ini  uwsgi-vassal-example.ini
wjs/conf/: apache-redirects.inc  jcom-apache-redirects.inc  jcomal-apache-redirects.inc
wjs/defaults/: settings.py  tests.py
wjs/jcom_profile/: __init__.py  admin.py  apps.py  constants.py  context_processors.py  custom_settings_utils.py  drupal_redirect_views.py  experimental_views.py  factories.py  forms.py  hooks.py  import_utils.py  middleware.py  mixins.py  models.py  monkey_patching.py  permissions.py  plugins.py  refugium_peccatorum.py  settings_helpers.py  signals.py  tests.py  translation.py  urls.py  utils.py  views.py
wjs/jcom_profile/dashboard/: logic.py  urls.py  views.py
wjs/jcom_profile/events/: assignment.py  wjs_events.py
wjs/jcom_profile/management/commands/: _count_recipients.py  _obsolete_check_jcom_settings.py  add_coauthors_submission_email_settings.py  add_custom_subscribe_email_message_settings.py  add_general_facebook_handle_setting.py  add_generic_analytics_code_setting.py  add_publication_alert_settings.py  add_submission_figures_data_title.py  add_user_as_main_author_setting.py  anonymize_data.py  check_jcom_settings.py  check_wjapp_new_registrations.py  correct_article_language.py  correct_recipients_without_topics.py  correct_settings_names.py  create_custom_settings.py  create_missing_profiles.py  create_random_data.py  create_role.py  export_settings.py  extract_doi_url.py  fix_label_en_in_galleys.py  import_articles_from_wjapp.py  import_from_drupal.py  import_from_wjapp.py  install_themes.py  install_wjs_cron.py  link_plugins.py  munin_count_recipients.py  run_customizations.py  (+5 more)
wjs/jcom_profile/migrations/: 0001_initial.py  0002_auto_20220428_1402.py  0002_auto_20220627_1943.py  0002_jcomprofile_gdpr_checkbox.py  0003_auto_20220628_1232.py  0003_jcomprofile_invitation_token.py  0004_specialissue_squashed_0008_auto_20221013_1539.py  0004_usercod_note.py  0005_auto_20221005_1620.py  0005_auto_20221018_0924.py  0006_auto_20221116_1538.py  0007_auto_20221118_1311.py  0008_auto_20221130_1457.py  0009_specialissue_allowed_sections.py  0010_articlewrapper_nid.py  0010_specialissue_editors.py  0011_auto_20221216_2128.py  0012_auto_20221216_2208.py  0013_merge_20221222_0935.py  0014_recipient.py  0015_auto_20230103_1357.py  0016_genealogy.py  0017_newsletter.py  0018_add_blank_true_to_recipient_user.py  0019_auto_20230413_1415.py  0019_recipient_language.py  0020_fill_newsletter_journal_field_with_first_journal.py  0021_fill_recipient_language.py  0022_make_newsletter_journal_field_not_nullable.py  0023_auto_20230430_1850.py  0023_auto_20230630_1756.py  0024_merged_23_recipient_user.py  0025_alter_correspondence_unique_together.py  0026_recipient_confirmation_email_last_sent.py  0027_add_eo_group.py  0028_add_unique_together_editor_journal_in_editorassignmentparameters.py  0029_remove_specialissue_allowed_sections_and_more.py  0030_specialissueparameters.py  0031_jcomprofile_keywords_and_more.py  0032_issueparameters_latex_fragment.py
wjs/jcom_profile/newsletter/: service.py  views.py
wjs/jcom_profile/templatetags/: materialize_forms_override.py  wjs_tags.py
wjs/jcom_profile/tests/: conftest.py  test_aaa.py  test_analytics_code.py  test_automatic_article_assignment.py  test_count_receive_newsletter.py  test_doi.py  test_extract_doi_url.py  test_fix_label_en_in_galleys.py  test_genealogy.py  test_import_command.py  test_imu.py  test_middleware.py  test_news.py  test_newsletters.py  test_plugins.py  test_redirects.py  test_search.py  test_section_translation.py  test_si_invitees.py  test_submission.py  test_utilities.py  test_views.py  tests.py
wjs/plugins/wjs_latest_articles/: models.py  plugin_settings.py  translation.py  views.py
wjs/plugins/wjs_latest_news/: models.py  plugin_settings.py  translation.py  urls.py  views.py
wjs/plugins/wjs_review/: admin.py  apps.py  communication_utils.py  conditions.py  context_processors.py  custom_types.py  filters.py  forms.py  forms__production.py  forms__visibility.py  logic.py  logic__production.py  logic__visibility.py  managers.py  mixins.py  models.py  permissions.py  plugin_settings.py  prophy.py  signals.py  states.py  types.py  urls.py  users.py  utils.py  views.py  views__production.py  views__visibility.py
wjs/plugins/wjs_stats/: forms.py  plugin_settings.py  urls.py  views.py
wjs/plugins/wjs_subscribe_newsletter/: models.py  plugin_settings.py  translation.py  views.py
wjs/themes/JCOM-theme/: build_assets.py
(+591 files in other folders)
