[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'

[tool.black]
line-length = 119
target-version = ['py39']
include = '/((wjs)/.*\.pyi?|.*\.py)$'

[tool.isort]
profile = "black"

[tool.pydocstyle]
ignore = ["D101","D104","D106","D212","D203","D213"]
