[metadata]
name = wjs.jcom_profile
version = 0.3.42
description = Enrich Janeway user profile
long_description = file: README.md
url = https://medialab.sissa.it/
author = Matteo
author_email = gamboz@medialab.sissa.it
license = AGPL
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: AGPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find_namespace:
python_requires = >=3.9
install_requires =
    Django >= 1.11
    django-easy-select2 == 1.3.3
    pandas
    odfpy
    django-sortedm2m == 2.0.0
    premailer
    pycountry
    jcomassistant

[options.extras_require]
test =
     pytest-django
     pytest-factoryboy
     pytest-mock

[options.package_data]
* =
    *.html
    *.css
    *.woff
    *.woff2
    *.js
    *.scss
    *-redirects.inc

[flake8]
exclude = ./.*,**/migrations/*,**/*settings.py
max-line-length = 119
# flake8-quotes
inline-quotes = double
# flake8-coding
no-accept-encodings = True
# flake8-tidy-imports
banned-modules = __future__ = this project supports python3 only
