[metadata]
name = wjs.jcom_profile
version = 0.4.23
description = Enrich Janeway user profile
url = https://medialab.sissa.it/
author = Matteo
author_email = gamboz@medialab.sissa.it
license = AGPL
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: AGPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find_namespace:
python_requires = >=3.9
install_requires =
    Django ~= 3.2
    django-easy-select2
    pandas ~= 2.0
    odfpy
    django-sortedm2m ~= 3.1
    premailer
    pycountry
    jcomassistant >= 0.1.22
    django-rosetta
    mariadb
    django-bootstrap5 @ git+https://github.com/sissamedialab/django-bootstrap5.git@58cdcb331e34d7981bbe029bf6d584c1d9dfff89
    django-model-utils ~= 4.3.1
    django-fsm ~= 2.8.1
    requests-toolbelt ~= 1.0.0

[options.extras_require]
test =
     pytest-django
     pytest-factoryboy
     pytest-mock
     pytest-freezegun
     pytest-xdist
     pytest-reverse

[options.package_data]
* =
    *.html
    *.css
    *.woff
    *.woff2
    *.js
    *.scss
    *.po
    *.mo
    *-redirects.inc

[flake8]
exclude = ./.*,**/migrations/*,**/*settings.py
max-line-length = 119
# flake8-quotes
inline-quotes = double
# flake8-coding
no-accept-encodings = True
# flake8-tidy-imports
banned-modules = __future__ = this project supports python3 only

[pycodestyle]
max-line-length = 119

[options.entry_points]
console_scripts =
    count_recipients = wjs.jcom_profile.management.commands._count_recipients:main
