[metadata]
name = wjs.jcom_profile
version = 0.6.07
description = Enrich Janeway user profile
url = https://medialab.sissa.it/
author = Matteo
author_email = gamboz@medialab.sissa.it
license = AGPL
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: AGPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find_namespace:
python_requires = >=3.9
install_requires =
    Django ~= 4.2
    django-easy-select2
    pandas ~= 2.0
    odfpy
    django-sortedm2m ~= 3.1
    premailer
    pycountry
    django-rosetta
    mariadb
    django-bootstrap5 @ git+https://github.com/sissamedialab/django-bootstrap5.git@58cdcb331e34d7981bbe029bf6d584c1d9dfff89
    django-model-utils ~= 4.3.1
    django-fsm ~= 2.8.1
    requests-toolbelt ~= 1.0.0
    django-filter ~= 23.5
    django-q2 ~= 1.6.0
    croniter ~= 2.0.0
    redis ~= 5.0.0
    blessed ~= 1.20

[options.extras_require]
test =
     pytest-django
     pytest-factoryboy
     pytest-mock
     pytest-freezegun
     pytest-xdist
     pytest-reverse
     wjs_mgmt_cmds

[options.package_data]
* =
    *.html
    *.css
    *.woff
    *.woff2
    *.js
    *.scss
    *.po
    *.mo
    *-redirects.inc

[flake8]
exclude = ./.*,**/migrations/*,**/*settings.py
max-line-length = 119
# flake8-quotes
inline-quotes = double
# flake8-coding
no-accept-encodings = True
# flake8-tidy-imports
banned-modules = __future__ = this project supports python3 only

[pycodestyle]
max-line-length = 119

[pydocstyle]
ignore = D102, D200, D203, D212, D213

[options.entry_points]
console_scripts =
    count_recipients = wjs.jcom_profile.management.commands._count_recipients:main
